ground-station/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ground-station
spec:
  to:
    kind: Service
    name: ground-station
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
